--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,13 +7,65 @@
     tools:context="com.diogofreitas.ruleofthree.MainActivityFragment"
     tools:showIn="@layout/activity_main">
 
-    <TextView
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.250">
+
+        <EditText
+            android:id="@+id/input1"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="60dp"
+            android:layout_marginStart="65dp"
+            android:layout_marginTop="80dp"
+            android:ems="10"
+            android:inputType="number" />
+
+        <EditText
+            android:id="@+id/input2"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/input1"
+            android:layout_alignBottom="@+id/input1"
+            android:layout_alignLeft="@+id/input4"
+            android:layout_alignStart="@+id/input4"
+            android:layout_marginTop="80dp"
+            android:ems="10"
+            android:inputType="number" />
+
+        <EditText
+            android:id="@+id/input3"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/input1"
+            android:layout_alignStart="@+id/input1"
+            android:layout_below="@+id/input1"
+            android:layout_marginTop="57dp"
+            android:ems="10"
+            android:inputType="number" />
+
+        <EditText
+            android:id="@+id/input4"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/input3"
+            android:layout_alignBottom="@+id/input3"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginEnd="65dp"
+            android:layout_marginRight="60dp"
+            android:ems="10"
+            android:inputType="number" />
+
+    </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
